libs/preprocessor/tests/errors/pe27_unexpected_endif/source.hpp
#define SOMETHING
systemChat "A";
#endif
